--- a/Shoppe/src/main/resources/application.properties
+++ b/Shoppe/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:shoppedb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+management.endpoints.web.exposure.include =prometheus,metrics,health
